[build-system]
requires = ["setuptools>=61.0", "wheel"]

[project]
name = "kursl"
version = "0.2.1"
authors = [{ name = "Dawid Laszuk" }]
description = "Implemention of KurSL method"
readme = "README.md"
requires-python = ">=3.8"
keywords = ["KurSL", "Kuramoto", "synchronization", "Kuramoto model"]
license = { text = "MIT" }
dependencies = [
    "numpy>=1.13.3",
    "scipy<1.11.0",
    "emcee>=2.2.1,<3.0",
]

[project.optional-dependencies]
plot = ['matplotlib']
dev = ['black==23.3.*', 'isort==5.*', 'pytest==6.*', 'pytest-cov', 'twine==3.*']

[tool.setuptools]
packages = ['kursl']

[tool.black]
line-length = 120