[build-system]
requires = ["setuptools>=61.0", "wheel"]

[project]
name = "kursl"
version = "0.3.0"
authors = [{ name = "Dawid Laszuk" }]
description = "Implemention of KurSL method"
readme = "README.md"
requires-python = ">=3.12,<3.14"
keywords = ["KurSL", "Kuramoto", "synchronization", "Kuramoto model"]
license = { text = "MIT" }
dependencies = [
    "numpy>=2.0,<3.0",
    "scipy>1.11.0",
    "emcee>=2.2.1,<3.0",
]

[project.optional-dependencies]
plot = ['matplotlib']
dev = ["ruff==0.9.*"]
test = ['pytest==8.*']

[tool.setuptools]
packages = ['kursl']

[tool.ruff]
line-length = 120

[tool.pytest.ini_options]
norecursedirs = "tests/helpers"
