[bdist_wheel]
universal=1

[metadata]
name = kursl
version = 0.1.1
author = Dawid Laszuk
description = Implemention of KurSL method
url = https://github.com/laszukdawid/kursl
long_description = file: README.md
keywords = KurSL, Kuramoto, synchronization, Kuramoto model
license = Apache License 2.0

[options]
packages = kursl
python_requires = ==3.6.*
install_requires =
    numpy>=1.13.3,<1.20.0
    scipy>=0.19.1,<1.0
    matplotlib>=1.0,<2.0
    emcee>=2.2.1,<3.0
